--- a/news.txt
+++ b/news.txt
@@ -1,6 +1,6 @@
-2:I[1946,["819","static/chunks/819-e0ef096fe289e067.js","834","static/chunks/app/news/page-2cf89217e26c7292.js"],"Layout"]
+2:I[1946,["819","static/chunks/819-e0ef096fe289e067.js","834","static/chunks/app/news/page-db7158f1bf34eb0f.js"],"Layout"]
 3:I[4707,[],""]
 4:I[6423,[],""]
-0:["UzP1yrGKDaRLlP7bcO3TR",[[["",{"children":["news",{"children":["__PAGE__",{}]}]},"$undefined","$undefined",true],["",{"children":["news",{"children":["__PAGE__",{},[["$L1",["$","$L2",null,{"children":[["$","h1",null,{"className":"text-4xl font-bold mb-6","children":"News and Events"}],["$","p",null,{"children":"Latest news and upcoming events related to EOH Aerospace will be displayed here."}]]}],null],null],null]},[null,["$","$L3",null,{"parallelRouterKey":"children","segmentPath":["children","news","children"],"error":"$undefined","errorStyles":"$undefined","errorScripts":"$undefined","template":["$","$L4",null,{}],"templateStyles":"$undefined","templateScripts":"$undefined","notFound":"$undefined","notFoundStyles":"$undefined"}]],null]},[[[["$","link","0",{"rel":"stylesheet","href":"/EOH/_next/static/css/9ddd10dd765f37dc.css","precedence":"next","crossOrigin":"$undefined"}]],["$","html",null,{"lang":"en","children":["$","body",null,{"children":["$","$L3",null,{"parallelRouterKey":"children","segmentPath":["children"],"error":"$undefined","errorStyles":"$undefined","errorScripts":"$undefined","template":["$","$L4",null,{}],"templateStyles":"$undefined","templateScripts":"$undefined","notFound":["$","$L2",null,{"children":["$","div",null,{"className":"text-center","children":[["$","h1",null,{"className":"text-4xl font-bold mb-4","children":"404 - Page Not Found"}],["$","p",null,{"children":"The page you are looking for does not exist."}]]}]}],"notFoundStyles":[]}]}]}]],null],null],["$L5",null]]]]
+0:["bf00YvNP6ftIBO_CT1fsz",[[["",{"children":["news",{"children":["__PAGE__",{}]}]},"$undefined","$undefined",true],["",{"children":["news",{"children":["__PAGE__",{},[["$L1",["$","$L2",null,{"children":[["$","h1",null,{"className":"text-4xl font-bold mb-6","children":"News and Events"}],["$","p",null,{"children":"Latest news and upcoming events related to EOH Aerospace will be displayed here."}]]}],null],null],null]},[null,["$","$L3",null,{"parallelRouterKey":"children","segmentPath":["children","news","children"],"error":"$undefined","errorStyles":"$undefined","errorScripts":"$undefined","template":["$","$L4",null,{}],"templateStyles":"$undefined","templateScripts":"$undefined","notFound":"$undefined","notFoundStyles":"$undefined"}]],null]},[[[["$","link","0",{"rel":"stylesheet","href":"/EOH/_next/static/css/9ddd10dd765f37dc.css","precedence":"next","crossOrigin":"$undefined"}]],["$","html",null,{"lang":"en","children":["$","body",null,{"children":["$","$L3",null,{"parallelRouterKey":"children","segmentPath":["children"],"error":"$undefined","errorStyles":"$undefined","errorScripts":"$undefined","template":["$","$L4",null,{}],"templateStyles":"$undefined","templateScripts":"$undefined","notFound":["$","$L2",null,{"children":["$","div",null,{"className":"text-center","children":[["$","h1",null,{"className":"text-4xl font-bold mb-4","children":"404 - Page Not Found"}],["$","p",null,{"children":"The page you are looking for does not exist."}]]}]}],"notFoundStyles":[]}]}]}]],null],null],["$L5",null]]]]
 5:[["$","meta","0",{"name":"viewport","content":"width=device-width, initial-scale=1"}],["$","meta","1",{"charSet":"utf-8"}],["$","title","2",{"children":"v0 App"}],["$","meta","3",{"name":"description","content":"Created with v0"}]]
 1:null
